// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedElement renders with default values 1`] = `
<body>
  <div>
    <path
      d="M 1 0 A 1 1 0 0 1 0.9998476951563913 0.01745240643728351 L 1.9996953903127825 0.03490481287456702 A 2 2 0 0 0 2 0 Z"
    />
  </div>
</body>
`;

exports[`CurvedElement renders with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 125 193.30127018922192 A 50 50 0 0 1 100 200 L 100.00000000000001 280 A 130 130 0 0 0 165 262.583302491977 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <path
      d="M 125 193.30127018922192 A 50 50 0 0 1 91.31759111665349 199.2403876506104 L 77.42573690329905 278.02500789158705 A 130 130 0 0 0 165 262.583302491977 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter cx is modified 1`] = `
<body>
  <div>
    <path
      d="M 65 193.30127018922192 A 50 50 0 0 1 40 200 L 40.00000000000001 280 A 130 130 0 0 0 105.00000000000001 262.583302491977 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter cy is modified 1`] = `
<body>
  <div>
    <path
      d="M 125 83.30127018922192 A 50 50 0 0 1 100 90 L 100.00000000000001 170 A 130 130 0 0 0 165 152.583302491977 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter d is modified 1`] = `
<body>
  <div>
    <path
      d="M 127.94857298266358 178.61603166465832 A 40 40 0 0 1 90.10384162981907 188.75649686842578 L 90.00850123238898 289.6430089634881 A 140 140 0 0 0 178.4743962363761 265.9386438394733 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 125 193.30127018922192 A 50 50 0 0 1 100 200 L 100.00000000000001 280 A 130 130 0 0 0 165 262.583302491977 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter radius is modified 1`] = `
<body>
  <div>
    <path
      d="M 120 184.64101615137753 A 40 40 0 0 1 100 190 L 100.00000000000001 270 A 120 120 0 0 0 160 253.92304845413264 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter start is modified 1`] = `
<body>
  <div>
    <path
      d="M 138.3022221559489 182.13938048432698 A 50 50 0 0 1 117.10100716628344 196.9846310392954 L 144.46261863233696 272.1600407021681 A 130 130 0 0 0 199.58577760546714 233.5623892592501 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 125 193.30127018922192 A 50 50 0 0 1 100 200 L 100.00000000000001 280 A 130 130 0 0 0 165 262.583302491977 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 125 193.30127018922192 A 50 50 0 0 1 100 200 L 100.00000000000001 280 A 130 130 0 0 0 165 262.583302491977 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      d="M 125 193.30127018922192 A 50 50 0 0 1 100 200 L 100.00000000000001 280 A 130 130 0 0 0 165 262.583302491977 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`CurvedElement updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      d="M 125 193.30127018922192 A 50 50 0 0 1 100 200 L 100 240 A 90 90 0 0 0 145 227.94228634059948 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;
